tried to change the blurb below hello to stop shifting when animation occurs

--- a/billy-port/src/components/contact.css
+++ b/billy-port/src/components/contact.css
@@ -1,5 +1,7 @@
 .contact {
   min-height: 100vh;
+  overflow-x: hidden;
+  width: 100vw;
 }
 
 .contact-wrapper {
@@ -7,33 +9,37 @@
   place-content: start;
   padding-top: 12vh;
   padding-left: 14vh;
+  overflow-x: hidden;
+  max-width: 100vw;
+  box-sizing: border-box;
 
-    @media screen and (max-width: 1200px) {
-      height: auto;
-      padding-top: 0;
-      padding-left: 1rem;
-      width: auto;
-      }
+  @media screen and (max-width: 1200px) {
+    height: auto;
+    padding-top: 0;
+    padding-left: 1rem;
+    width: 100%;
+    overflow-x: hidden;
+  }
 }
 
 a.home-link {
-    transform: rotate(270deg);
-    padding: 10px 0px 70px 0px;
-    text-decoration: none;
-    color: #1A1818;
-    font-family: 'Face', sans-serif;
-    font-weight: 200;
-    font-size: 2vh;
-    z-index: 10000;
+  transform: rotate(270deg);
+  padding: 10px 0px 70px 0px;
+  text-decoration: none;
+  color: #1A1818;
+  font-family: 'Face', sans-serif;
+  font-weight: 200;
+  font-size: 2vh;
+  z-index: 10000;
 
-    @media  screen and (max-width: 1200px) {
-      transform: none;
-      display: flex;
-      justify-content: center;
-      flex-direction: row;
-      margin: 0 12vw;
-      font-size: 3.5vw;
-      z-index: 10000;
+  @media screen and (max-width: 1200px) {
+    transform: none;
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    margin: 0 12vw;
+    font-size: 3.5vw;
+    z-index: 10000;
   }
 }
 
@@ -46,14 +52,14 @@ a.home-link:hover {
   font-weight: 300;
   font-size: 2vh;
   
-  @media  screen and (max-width: 1200px) {
+  @media screen and (max-width: 1200px) {
     transform: none;
     display: flex;
     justify-content: center;
     flex-direction: row;
     margin: 0 12vw;
     font-size: 3.5vw;
-}
+  }
 }
 
 .header-wrapper {
@@ -77,26 +83,30 @@ a.home-link:hover {
   }
 }
 
-  .hello {
-    animation: animate 2s linear;
-    font-family: 'March', sans-serif;
-    line-height: 0.9;
-    margin-bottom: 2vh;
+.hello {
+  animation: animate 2s linear;
+  font-family: 'March', sans-serif;
+  line-height: 0.9;
+  margin-bottom: 2vh;
+  min-width: 50vw;
 
-    @media screen and (max-width: 1200px) {
-      line-height: 0.85;
-      margin-bottom: 1vh;
-    }
+  @media screen and (max-width: 1200px) {
+    line-height: 0.85;
+    margin-bottom: 1vh;
+    min-width: 100vw;
+    margin-left: -1rem;
+    padding-left: 1rem;
   }
-  
-  @keyframes animate {
-    0% { 
-      opacity: 0; 
-    }
-    100% {
-      animation-play-state: paused;
-       opacity: 1;
-      }
+}
+
+@keyframes animate {
+  0% { 
+    opacity: 0; 
+  }
+  100% {
+    animation-play-state: paused;
+    opacity: 1;
+  }
 }
 
 .contact-content-container {
@@ -109,118 +119,118 @@ a.home-link:hover {
   }
 }
 
-  .index-module_type__E-SaG {
-    font-size: 40vh;
+.index-module_type__E-SaG {
+  font-size: 40vh;
 
-    @media screen and (max-width: 1200px) {
-      font-size: 12.8vh;
-    }
+  @media screen and (max-width: 1200px) {
+    font-size: 12.8vh;
   }
+}
 
-  .about-txt-container {
-    padding-left: 3vh;
+.about-txt-container {
+  padding-left: 3vh;
 
-    @media screen and (max-width: 1200px) {
-      padding-left: 0.5vh;
-    }
-
+  @media screen and (max-width: 1200px) {
+    padding-left: 0.5vh;
   }
-  ul {
-   font-family: 'Gayathri', sans-serif;
-    font-style: italic;
-    font-weight: 100;
-    padding: 0px;
-    margin: 0px;
-    padding-top: 0.8rem;
+}
 
-    
-    @media screen and (max-width: 1200px) {
-      padding-top: 1.5rem;
-    }
+ul {
+  font-family: 'Gayathri', sans-serif;
+  font-style: italic;
+  font-weight: 100;
+  padding: 0px;
+  margin: 0px;
+  padding-top: 0.8rem;
+
+  @media screen and (max-width: 1200px) {
+    padding-top: 1.5rem;
   }
+}
 
-  .about-p {
-    font-family: 'Kayak Sans Regular', sans-serif;
-    font-weight: 400;
-    font-size: 2.6vh;
-    padding-bottom: 0.5rem;
-    margin-top: 0;
+.about-p {
+  font-family: 'Kayak Sans Regular', sans-serif;
+  font-weight: 400;
+  font-size: 2.6vh;
+  padding-bottom: 0.5rem;
+  margin-top: 0;
 
-    @media screen and (max-width: 1200px) {
-      font-size: 2.2vh;
-    }
-  }
-
-  .li-text {
-    font-family: 'Face', sans-serif;
-    letter-spacing: 1px;
-    padding-left: 5px;
-    padding-right: 5px;
+  @media screen and (max-width: 1200px) {
     font-size: 2.2vh;
+  }
+}
+
+.li-text {
+  font-family: 'Face', sans-serif;
+  letter-spacing: 1px;
+  padding-left: 5px;
+  padding-right: 5px;
+  font-size: 2.2vh;
+  text-decoration: none !important;
+
+  @media screen and (max-width: 1200px) {
+    font-size: 1.5vh;
     text-decoration: none !important;
+  }
+}
 
-    @media screen and (max-width: 1200px) {
-      font-size: 1.5vh;
-      text-decoration: none !important;
-    }
-  }
-  
-  .li-contact {
-    font-family: 'Face', sans-serif;
-    font-style: normal;
-    list-style: none;
-    font-size: 2vh;
-    white-space: nowrap;
-    text-decoration: none;
-  
-    @media screen and (max-width: 1200px) {
-      padding-top: 0.5rem;
-      max-width: fit-content;
-      font-size: 1.25vh;
-    }
-  }
-  
-  .li-link {
-    font-family: 'Gerbil', sans-serif;
-    letter-spacing: 1px;
-    color: #1A1818;
-    padding-left: 5px;
-    padding-right: 5px;
-    font-size: 2.2vh;
-    white-space: nowrap;
-    @media screen and (max-width: 1200px) {
-      font-size: 3vh;
-    } 
-  }
-  
-  .li-link:hover {
-    color: #1A1818;
-    text-decoration: line-through;
-  }
-  
-  .hero-text {
-    position: relative;
-    top: 50%;
-    transform: translateY(-50%);
-    font-size: 80px;
-    letter-spacing: 2px;
-  }
+.li-contact {
+  font-family: 'Face', sans-serif;
+  font-style: normal;
+  list-style: none;
+  font-size: 2vh;
+  white-space: nowrap;
+  text-decoration: none;
 
-  span.text {
-    font-family: 'Face', sans-serif;
-    font-weight: 300;
-    margin: 0;
-    padding: 0;
-
-    @media screen and (max-width: 1200px) {
-      font-size: 34vw;
-    }
+  @media screen and (max-width: 1200px) {
+    padding-top: 0.5rem;
+    max-width: fit-content;
+    font-size: 1.25vh;
   }
+}
 
-  span {
-    font-size: 40vh;
+.li-link {
+  font-family: 'Gerbil', sans-serif;
+  letter-spacing: 1px;
+  color: #1A1818;
+  padding-left: 5px;
+  padding-right: 5px;
+  font-size: 2.2vh;
+  white-space: nowrap;
 
-    @media screen and (max-width: 1200px) {
-      font-size: 40vw;
-    }
+  @media screen and (max-width: 1200px) {
+    font-size: 3vh;
+  } 
+}
+
+.li-link:hover {
+  color: #1A1818;
+  text-decoration: line-through;
+}
+
+.hero-text {
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 80px;
+  letter-spacing: 2px;
+}
+
+span.text {
+  font-family: 'Face', sans-serif;
+  font-weight: 300;
+  margin: 0;
+  padding: 0;
+
+  @media screen and (max-width: 1200px) {
+    font-size: 34vw;
   }
+}
+
+span {
+  font-size: 40vh;
+
+  @media screen and (max-width: 1200px) {
+    font-size: 40vw;
+  }
+}
